# navi-hack-2025-copilot

./: .env.tpl  API.md  Dockerfile.basic  Dockerfile.prod  Makefile  QUICKSTART.md  README.md  checklist_before_takeoff.json  docker-compose.yml  flight_data_filter.py  pyproject.toml  run.py  sr20.md
.github/: dependabot.yml
.github/workflows/: deploy.yml
Cirrus KHAF-KSQL 05_05_2024/: log_240505_132633_KHAF.csv
aviation_hackathon_sf/: __init__.py  checklist_agent.py  checklist_api.py  main.py  telemetry_validator.py  test_performer.py  text_to_speech.py
aviation_hackathon_sf/frontend/: layout.html
flight-data/: log_240505_100742_KSFO.csv  log_240518_112925_KSQL.csv  log_240803_103250_KPAO.csv  log_240803_103932_KPAO.csv  log_240922_155615_KPAO.csv
preflight_data/: preflight_data_only.csv
scripts/: README.md  __init__.py  run_checklist.py
