[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.isort]
profile = 'black'

[tool.poetry]
name = "aviation-hackathon-sf"
version = "0.0.1"
description = "aviation-hackathon-sf code base"
authors = ["Shubham Chaudhary <shubham@chaudhary.xyz>", "Nupur Baghel", "Chelsey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.3.1"
loguru = "^0.7.3"
python-dotenv = "^1.2.1"
uvicorn = "^0.38.0"
fastapi = "^0.121.2"
pydantic = "^2.12.4"


[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
pytest = "^9.0.1"
coverage = "^7.11.3"
pre-commit = "^4.4.0"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^8.2.3"

[tool.poetry.scripts]
inbound-tasks-api = "lineage.queue.inbound_tasks_api:api"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
